<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="less">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="nb_nine">9</string>
    <string name="nb_eight">8</string>
    <string name="nb_seven">7</string>
    <string name="nb_six">6</string>
    <string name="nb_five">5</string>
    <string name="nb_four">4</string>
    <string name="nb_three">3</string>
    <string name="nb_two">2</string>
    <string name="nb_one">1</string>
    <string name="nb_zero">0</string>
</resources>